--- a/index.html
+++ b/index.html
@@ -514,15 +514,15 @@
 
     // 剧情文本
     const storyParts = [
-        "很久很久以前，在沧县中学里...😃",
-        "生活着一只母狗和一只二狗❤️💕",
-        "美丽的母狗被邪恶的阿力到了四食堂！😭",
-        "勇敢的二狗决定踏上拯救母狗的征程。😡",
-        "神圣的丙友给予了二狗拐子，\n你可以用掴子来对敌人造成伤害😶‍🌫️",
-        "伟大的明峰给予了二狗 白屎💩和红肉🍖 ，\n红肉🍖是你成功的象征，\n而白屎💩可以在办公室购买更多加成！",
-        "接下来，他需要穿越三个危险的地点，分别是 \n高三教学楼😯 \n操场😥 \n四食堂😨 ",
-        "收集白屎，提升实力，\n最终挑战伪装成母狗的大灯Boss！\n并从阿力手中救出母狗！🥶",
-        "准备好开始冒险了吗？🦍"
+        "昔日，沧县中学有一母犬与二狗焉。\n📖译文: 很久很久以前，在沧县中学里...😃\n生活着一只母狗和一只二狗❤️💕",
+        "母犬貌美，为伪人阿力所劫。\n📖译文: 美丽的母狗被邪恶的阿力到了四食堂！😭",
+        "二狗骁勇，毅然赴征程，以救母犬。\n📖译文: 勇敢的二狗决定踏上拯救母狗的征程。😡",
+        "丙友圣明，赠狗以掴子之技。汝可以掴子击人以伤之。\n📖译文: 神圣的丙友给予了二狗拐子，\n你可以用掴子来对敌人造成伤害😶‍🌫️",
+        "明峰伟岸，与狗白屎红肉。红肉者，功成之证也；\n白屎者，可于公署购增益之术也。\n📖译文: 伟大的明峰给予了二狗 白屎💩和红肉🍖 ，\n红肉🍖是你成功的象征，\n而白屎💩可以在办公室购买更多加成！",
+        "于是，狗将历三重险境，一为高三书斋，二为操场，三为四食堂。\n📖译文: 接下来，他需要穿越三个危险的地点，分别是 \n高三教学楼😯 \n操场😥 \n四食堂😨 ",
+        "集白屎，强功力，以战伪作母犬之大灯，救母犬于阿力之手。\n📖译文: 收集白屎，提升实力，\n最终挑战伪装成母狗的大灯Boss！\n并从阿力手中救出母狗！🥶",
+        "君可愿往之？\n📖译文: 准备好开始冒险了吗？🦍",
+        "全文📗：昔日，沧县中学有一母犬与二狗焉。母犬貌美，为伪人阿力所劫。二狗骁勇，毅然赴征程，以救母犬。丙友圣明，赠狗以掴子之技。汝可以掴子击人以伤之。明峰伟岸，与狗白屎红肉。红肉者，功成之证也；白屎者，可于公署购增益之术也。于是，狗将历三重险境，一为高三书斋，二为操场，三为四食堂。集白屎，强功力，以战伪作母犬之大灯，救母犬于阿力之手。君可愿往之？ \n👩‍🏫戴圣于2/18作"
     ];
     let storyIndex = 0;
 
